snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.sha512
7ea762777fb7a8d8b4f195549c0a4f1f03e7fe8028dfeb1b77396ac7d58eba0ba73eafbd8d3aa80abdada2ffdc1a4da923c7556e0ebf20f91d63eb9df022d75e